argocd/app/outline/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
  labels:
    app: outline
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
    spec:
      containers:
        - name: outline
          image: docker.getoutline.com/outlinewiki/outline:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
