argocd/app/outline/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: outline
spec:
  selector:
    app.kubernetes.io/component: app
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
